force-app/main/default/objects/Lead/fields/Secondary_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Leads (Secondary Campaign)</relationshipLabel>
    <relationshipName>SecondaryLeads</relationshipName>
    <type>Lookup</type>
</CustomField>