force-app/main/default/objects/Lead/fields/SecondaryPartnerGroupId__c.field-meta.xml
<CustomField>
    <fullName>SecondaryPartnerGroupId__c</fullName>
    <label>SecondaryPartnerGroupId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>