force-app/main/default/objects/Lead/fields/State_External_Key__c.field-meta.xml
<CustomField>
    <fullName>State_External_Key__c</fullName>
    <label>State External Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>