force-app/main/default/objects/Lead/fields/Support_To__c.field-meta.xml
<CustomField>
    <fullName>Support_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>