force-app/main/default/objects/Lead/fields/Tertiary_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Tertiary_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tertiary Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Leads (Tertiary Campaign)</relationshipLabel>
    <relationshipName>TertiaryLeads</relationshipName>
    <type>Lookup</type>
</CustomField>