force-app/main/default/objects/Lead/fields/TimeFrame__c.field-meta.xml
<CustomField>
    <fullName>TimeFrame__c</fullName>
    <label>Time Frame</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Near Term (0-3 months)</fullName>
            </value>
            <value>
                <fullName>Mid Term (3-6 months)</fullName>
            </value>
            <value>
                <fullName>Long Term ( &gt; 6 months)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>