force-app/main/default/objects/Lead/fields/To_Be_Converted_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>To_Be_Converted_Account_Name__c</fullName>
    <label>To Be Converted Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>