force-app/main/default/objects/Lead/fields/Vertical_Temp__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Temp__c</fullName>
    <description>Backend Field used for mapping with Opty&apos;s Vertical, gets updated from process builder</description>
    <label>Vertical Temp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Verticals</valueSetName>
    </valueSet>
</CustomField>