force-app/main/default/objects/Lead/fields/X2BeDel_CreatorCount__c.field-meta.xml
<CustomField>
    <fullName>X2BeDel_CreatorCount__c</fullName>
    <formula>Creator__c =  CreatedById</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2BeDel_CreatorCount</label>
    <type>Checkbox</type>
</CustomField>