force-app/main/default/objects/Lead/recordTypes/Partner.recordType-meta.xml
<RecordType>
    <fullName>Partner</fullName>
    <active>true</active>
    <businessProcess>Partner Registration</businessProcess>
    <label>Partner</label>
</RecordType>