force-app/main/default/objects/Lead/recordTypes/Regular_Lead.recordType-meta.xml
<RecordType>
    <fullName>Regular_Lead</fullName>
    <active>true</active>
    <businessProcess>Regular Lead</businessProcess>
    <label>Regular Lead</label>
</RecordType>