force-app/main/default/objects/Lead/validationRules/End_cust_add_and_city_required_if_source.validationRule-meta.xml
<ValidationRule>
    <fullName>End_cust_add_and_city_required_if_source</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(
(ISPICKVAL( PrimarySource__c, &apos;Alliance Partner&apos;) ||
 ISPICKVAL( PrimarySource__c, &apos;Distributor Partner-TP&apos;) ),
(ISBLANK(  End_Customer_City__c ) || ISBLANK(   End_Customer_Address__c ))
),
AND(
(ISPICKVAL( SecondarySource__c , &apos;Alliance Partner&apos;) ||
 ISPICKVAL( SecondarySource__c , &apos;Distributor Partner-TP&apos;) ),
(ISBLANK(  End_Customer_City__c ) || ISBLANK(   End_Customer_Address__c ))
),
AND(
(ISPICKVAL( TertiarySource__c , &apos;Alliance Partner&apos;) ||
 ISPICKVAL( TertiarySource__c , &apos;Distributor Partner-TP&apos;) ),
(ISBLANK(  End_Customer_City__c ) || ISBLANK(   End_Customer_Address__c ))
)
)</errorConditionFormula>
    <errorMessage>End Customer City and End Customer Address is required if Source is Alliance Partner or Distributor - TP.</errorMessage>
</ValidationRule>