force-app/main/default/objects/Lead/validationRules/IS_Team_should_Accept_Lead_First.validationRule-meta.xml
<ValidationRule>
    <fullName>IS_Team_should_Accept_Lead_First</fullName>
    <active>true</active>
    <errorConditionFormula>NOW() -  CreatedDate &gt; 0.0004 &amp;&amp;
BEGINS( PRIORVALUE(OwnerId), &quot;00G&quot;) &amp;&amp;
( NOT(ISCHANGED( OwnerId )) ||
  Owner:User.Profile.Name &lt;&gt; &quot;Yotta IS Profile&quot;
) &amp;&amp;
$Profile.Name &lt;&gt; &quot;System Administrator&quot; &amp;&amp;
$UserRole.Name &lt;&gt; &quot;Yotta IS Head&quot;</errorConditionFormula>
    <errorMessage>Please accept the lead before working on it</errorMessage>
</ValidationRule>