force-app/main/default/objects/Lead/validationRules/Partner_is_required_if_Source_is_Partner.validationRule-meta.xml
<ValidationRule>
    <fullName>Partner_is_required_if_Source_is_Partner</fullName>
    <active>true</active>
    <description>previous name: Prim_Sec_Tert_Source_Partner
Excluded partner community user as they can only put partner source and partner account is getting tagged by process builder, with this validation that process will break.</description>
    <errorConditionFormula>AND( 
  NOT(IsPickVal($User.UserType,&apos;PowerPartner&apos;)),
  OR( 
    AND(
      CONTAINS( Text( PrimarySource__c ), &apos;Partner&apos;),
      ISBLANK( Partner_Primary__c )
    ),
    AND(
      CONTAINS( Text( SecondarySource__c ), &apos;Partner&apos;),
      ISBLANK( Partner_Secondary__c )
    ),
    AND(
      CONTAINS( Text( TertiarySource__c ), &apos;Partner&apos;),
      ISBLANK( Partner_Tertiary__c )
    )
  )
)</errorConditionFormula>
    <errorMessage>Partner is required if Source is Partner</errorMessage>
</ValidationRule>