force-app/main/default/objects/Lead/validationRules/Partner_Type_is_not_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Partner_Type_is_not_blank</fullName>
    <active>false</active>
    <errorConditionFormula>AND(   NOT( ISBLANK( Partner_Type__c ) ),( ISBLANK( Partner_Manager__c ) ))</errorConditionFormula>
    <errorMessage>Enter Partner Manager for following Partner Lead</errorMessage>
</ValidationRule>