force-app/main/default/objects/Lead/validationRules/Postal_Code_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Postal_Code_Format</fullName>
    <active>false</active>
    <description>SR-0208 Can contain 0-9, A-Z &amp; a-z only (no space allowed as well) - Deactivated this as there was an issue with the push of leads from Pardot</description>
    <errorConditionFormula>NOT(REGEX(Postal_code__c, &quot;[a-zA-Z0-9]{6}&quot;))</errorConditionFormula>
    <errorMessage>Postal Code should in valid format</errorMessage>
</ValidationRule>