force-app/main/default/objects/Lead/validationRules/Prevent_BT_ST_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_BT_ST_Update</fullName>
    <active>true</active>
    <description>ISPICKVAL(  Status , &apos;Assigned to Sales&apos;) is removed and $Profile.Name &lt;&gt; &apos;Yotta IS Profile&apos; is added</description>
    <errorConditionFormula>AND(
 $Profile.Name &lt;&gt; &apos;Yotta IS Profile&apos;,
 $Profile.Name &lt;&gt; &apos;System Administrator&apos;,
 RecordType.DeveloperName =&apos;Regular_Lead&apos;,
 OR( 
   ISCHANGED( Support_To__c ),
   ISCHANGED( SupporttoCustomerName__c ),
   ISCHANGED( Company ),
   ISCHANGED( BillToSameasSupportTo__c )
 )   
)</errorConditionFormula>
    <errorMessage>Can&apos;t change Company Name &amp; Support To Details.</errorMessage>
</ValidationRule>