force-app/main/default/objects/Lead/validationRules/Prim_Sec_Tert_Marketing_to_Source.validationRule-meta.xml
<ValidationRule>
    <fullName>Prim_Sec_Tert_Marketing_to_Source</fullName>
    <active>true</active>
    <errorConditionFormula>OR( 
	AND(
		NOT(ISPICKVAL( PrimarySource__c, &apos;Marketing&apos;)),
		NOT(ISBLANK( Primary_Campaign__c ))
	),
	AND(
		NOT(ISPICKVAL( SecondarySource__c, &apos;Marketing&apos;)),
		NOT(ISBLANK( Secondary_Campaign__c ))
	),
	AND(
		NOT(ISPICKVAL( TertiarySource__c, &apos;Marketing&apos;)),
		NOT(ISBLANK(Tertiary_Campaign__c))
	)
)</errorConditionFormula>
    <errorMessage>Source should be Marketing when Campaign is associated</errorMessage>
</ValidationRule>