force-app/main/default/objects/Lead/validationRules/Prim_Sec_Tert_Source_Marketing.validationRule-meta.xml
<ValidationRule>
    <fullName>Prim_Sec_Tert_Source_Marketing</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(
 ISPICKVAL( PrimarySource__c, &apos;Marketing&apos;),
 ISBLANK( Primary_Campaign__c )
),
AND(
ISPICKVAL( SecondarySource__c , &apos;Marketing&apos;),
ISBLANK( Secondary_Campaign__c )
),
AND(
ISPICKVAL( TertiarySource__c , &apos;Marketing&apos;),
ISBLANK( Tertiary_Campaign__c )
)
)</errorConditionFormula>
    <errorMessage>Campaign is required if Source is Marketing</errorMessage>
</ValidationRule>