force-app/main/default/objects/Lead/validationRules/SE_Lead_Status_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>SE_Lead_Status_Restriction</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 $Profile.Name &lt;&gt; &quot;Yotta IS Profile&quot;,
 $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
 RecordType.DeveloperName = &quot;Regular_Lead&quot;,
 OR(
   AND(
     ISCHANGED( Status ),
     ISPICKVAL(Status,&apos;Pending Assignment&apos;),
     ISPICKVAL(Status,&apos;Pending Qualification&apos;)
   ),
   AND(
     ISNEW(),
     ISPICKVAL(Status,&apos;Duplicate&apos;),
     ISPICKVAL(Status,&apos;Pending Assignment&apos;),
     ISPICKVAL(Status,&apos;Pending Qualification&apos;)
   )
 )
)</errorConditionFormula>
    <errorMessage>Status selected is not a valid selection. Please change appropriately.</errorMessage>
</ValidationRule>