force-app/main/default/objects/Lead/validationRules/Source_shud_Partner_if_Partner_is_tagged.validationRule-meta.xml
<ValidationRule>
    <fullName>Source_shud_Partner_if_Partner_is_tagged</fullName>
    <active>true</active>
    <description>Previous Name: Prim_Sec_Tert_Partner_to_Source</description>
    <errorConditionFormula>OR(
  AND(
    NOT(ISBLANK( Partner_Primary__c )),
    OR(
      ISBLANK( Text ( PrimarySource__c ) ),
      NOT(CONTAINS( Text( PrimarySource__c ), &apos;Partner&apos;))
    )
  ),
  AND(
    NOT(ISBLANK( Partner_Secondary__c )),
    OR(
      ISBLANK( Text ( SecondarySource__c ) ),
      NOT(CONTAINS( Text( SecondarySource__c ), &apos;Partner&apos;))
    )
  ),
  AND(
    NOT(ISBLANK( Partner_Tertiary__c )),
    OR(
      ISBLANK( Text ( TertiarySource__c ) ),
      NOT(CONTAINS( Text( TertiarySource__c ), &apos;Partner&apos;))
    )
  )
)</errorConditionFormula>
    <errorMessage>Source should be Partner when Partner is associated</errorMessage>
</ValidationRule>