force-app/main/default/objects/Lead/validationRules/Support_To_And_Lookup_IS_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Support_To_And_Lookup_IS_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 RecordType.DeveloperName =&apos;Regular_Lead&apos;,
 NOT( BillToSameasSupportTo__c ),
 ISBLANK( Support_To__c ),
 ISBLANK( SupporttoCustomerName__c ) 
)</errorConditionFormula>
    <errorMessage>Please enter Support To details</errorMessage>
</ValidationRule>