force-app/main/default/objects/Lead/validationRules/Support_To_LKUP_and_Name_Cannot_be_pop.validationRule-meta.xml
<ValidationRule>
    <fullName>Support_To_LKUP_and_Name_Cannot_be_pop</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 NOT(ISBLANK( Support_To__c )),
 NOT(ISBLANK( SupporttoCustomerName__c ))
)</errorConditionFormula>
    <errorMessage>Support To and Support To Customer Name cannot be populated together</errorMessage>
</ValidationRule>