force-app/main/default/objects/Lead/validationRules/Support_To_Should_Be_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Support_To_Should_Be_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 BillToSameasSupportTo__c, 
 OR( 
   NOT(ISBLANK(Support_To__c)),
   NOT(ISBLANK(SupporttoCustomerName__c))
 )
)</errorConditionFormula>
    <errorMessage>Support To Customer Details cannot be populated when Bill To same as Support To</errorMessage>
</ValidationRule>