force-app/main/default/objects/Lead/validationRules/Tertiary_Partner_Source_Is_Needed.validationRule-meta.xml
<ValidationRule>
    <fullName>Tertiary_Partner_Source_Is_Needed</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 ISPICKVAL(   TertiarySource__c , &apos;Alliance Partner&apos;),
 ISBLANK(    Partner_Tertiary__c )
)</errorConditionFormula>
    <errorDisplayField>Partner_Tertiary__c</errorDisplayField>
    <errorMessage>Tertiary Partner is required</errorMessage>
</ValidationRule>