force-app/main/default/objects/Lead/listViews/IS_Team_Lead.listView-meta.xml
<ListView>
    <fullName>IS_Team_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Open,Contacted,Pending Qualification,Pending Assignment,Assigned to Sales,Converted,Marketing Qualified</value>
    </filters>
    <label>IS Team</label>
    <queue>IS_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <group>All_Users</group>
        <roleAndSubordinates>Sales_Coordinator</roleAndSubordinates>
        <roleAndSubordinates>Yotta_Sales_Head</roleAndSubordinates>
        <roleAndSubordinatesInternal>Yotta_Sales_Head</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>