force-app/main/default/objects/Lead/listViews/My_leads_list.listView-meta.xml
<ListView>
    <fullName>My_leads_list</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>End_Customer_Project__c</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.RATING</columns>
    <columns>LEAD.STATUS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Open,Contacted,Pending Qualification,Pending Assignment,Nurturing,Assigned to Sales,Deferred,Marketing Qualified</value>
    </filters>
    <label>My leads</label>
</ListView>