force-app/main/default/objects/Lead/listViews/Partner_Registration_Lead.listView-meta.xml
<ListView>
    <fullName>Partner_Registration_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>End_Customer_Project__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Partner</value>
    </filters>
    <label>Partner Registration Lead</label>
    <sharedTo>
        <role>Yotta_IS_Team</role>
        <roleAndSubordinatesInternal>Yotta_Partner_Head</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>